--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
@@ -31,6 +30,7 @@
     "json-server": "^0.17.3",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
-    "sass": "^1.63.4"
+    "sass": "^1.68.0",
+    "typescript": "5.2.2"
   }
 }
